@@ -1,21 +1,12 @@
 buildscript {
     ext.versions = [
-            // redis client 実装
-            // https://lettuce.io/
-            'lettuce'              : '6.1.8.RELEASE',
-
-            // http client
-            // https://square.github.io/okhttp/
-            'okhttp'               : '4.9.3',
-            'retrofit'             : '2.9.0',
-
             // discord client library
             // https://github.com/DV8FromTheWorld/JDA
-            'JDA'                  : '5.0.0-alpha.21',
+            'JDA'                  : '5.0.0-beta.22',
 
             // discord pagination util
             // https://github.com/ygimenez/Pagination-Utils
-            'JDAUtils'             : '3.0.8',
+            'JDAUtils'             : '4.0.6',
 
             // apache common Lang
             // https://commons.apache.org/
@@ -23,11 +14,11 @@ buildscript {
 
             // log
             // http://www.slf4j.org/
-            'slf4jApi'             : '1.7.36',
+            'slf4jApi'             : '2.0.12',
 
             // elastic search（テキスト検索）
             // https://www.elastic.co/guide/en/elasticsearch/client/java-api/current/index.html
-            'elasticsearch'        : '7.17.3',
+            'elasticsearch'        : '8.13.1',
 
             // エラーDiscord通知
             // https://github.com/napstr/logback-discord-appender
@@ -43,19 +34,14 @@ buildscript {
 
             // lombok
             // https://mvnrepository.com/artifact/org.projectlombok/lombok
-            'lombok'               : '1.18.24',
+            'lombok'               : '1.18.30',
 
             // micrometer
             // spring actuatorがprometheus形式でmetrixを出力するために必要
-            'micrometer'           : '1.8.5',
+            'micrometer'           : '1.12.4',
 
-            // grpc用。サービス間通信で使う
-            // https://github.com/LogNet/grpc-spring-boot-starter
-            // https://grpc.io/
-            // https://github.com/grpc/grpc-java
-            'grpcSpringStarter'    : '4.7.0',
-            'grpc'                 : '3.20.1',
-            'grpcGenJava'          : '1.45.1',
+            // PDXテキストの展開
+            'rico'                 : '0.0.14',
 
             // deepl翻訳用SDK
             'deepl'                : '1.1.0',
@@ -64,11 +50,11 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.6.6'
+    id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version "1.0.11.RELEASE"
     // Dockerhubにdocker imageをuploadするのに必要
     // https://github.com/palantir/gradle-docker
-    id 'com.palantir.docker' version "0.33.0"
+    id 'com.palantir.docker' version "0.36.0"
     // リリース処理に必要
     // https://github.com/researchgate/gradle-release
     id 'net.researchgate.release' version "2.8.1"
@@ -78,13 +64,11 @@ plugins {
     // githubのリリースを登録するのに必要
     // https://github.com/ajoberstar/gradle-git-publish
     id 'org.ajoberstar.git-publish' version '4.1.0'
-    // intellijでprotoをコンパイルするのに必要
-    id "com.google.protobuf" version "0.8.18"
 }
 
 group = 'com.popush'
-sourceCompatibility = "17.PREVIEW"
-targetCompatibility = "17.PREVIEW"
+sourceCompatibility = "21"
+targetCompatibility = "21"
 
 gitProperties {
     customProperty 'version', version
@@ -99,15 +83,18 @@ repositories {
         name 'm2-dv8tion'
         url 'https://m2.dv8tion.net/releases'
     }
+    maven {
+        url = uri("https://maven.pkg.github.com/matanki-saito/pdx-txt-java")
+        credentials {
+            username = 'matanki-saito'
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 bootJar {
     archiveBaseName = 'henrietta-docker'
     archiveVersion = '1.0.0'
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
 }
 
 // コメントに日本語があるので必要
@@ -116,9 +103,9 @@ javadoc {
     options.encoding = 'UTF-8'
 }
 
-task unpack(type: Copy) {
+tasks.register('unpack', Copy) {
     dependsOn bootJar
-    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    from(zipTree(tasks.bootJar.outputs.files.singleFile as Object))
     into("build/dependency")
 }
 
@@ -162,79 +149,39 @@ release {
 dependencies {
     // spring boot
     implementation("org.springframework.boot:spring-boot-starter-web")
-    implementation("org.springframework.boot:spring-boot-starter-aop")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-data-redis")
-    implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 
-    // other
-    implementation("io.micrometer:micrometer-registry-prometheus:${versions.micrometer}")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jacksonDatatypeJsr310}")
-    implementation("org.apache.commons:commons-lang3:${versions.apacheCommonLang}")
-    implementation("io.lettuce:lettuce-core:${versions.lettuce}")
-    implementation("com.squareup.okhttp3:okhttp:${versions.okhttp}")
-    implementation("com.squareup.retrofit2:retrofit:${versions.retrofit}")
-    implementation("com.squareup.retrofit2:converter-jackson:${versions.retrofit}")
-    implementation('com.github.ben-manes.caffeine:caffeine')
+    // log, monitoring
     implementation("org.slf4j:slf4j-api:${versions.slf4jApi}")
+    implementation("io.micrometer:micrometer-core")
+    implementation("io.micrometer:micrometer-registry-prometheus")
+    implementation("io.micrometer:micrometer-observation")
     implementation("com.github.napstr:logback-discord-appender:${versions.logbackDiscord}")
+
+    // 外部SDK
+    implementation("net.dv8tion:JDA:${versions.JDA}")
+    implementation("com.github.ygimenez:Pagination-Utils:${versions.JDAUtils}")
+    implementation("co.elastic.clients:elasticsearch-java:${versions.elasticsearch}")
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.4'
+    //implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation group: 'org.kohsuke', name: 'github-api', version: '1.313'
     implementation("com.deepl.api:deepl-java:${versions.deepl}")
 
-    implementation("net.dv8tion:JDA:${versions.JDA}")
-    //implementation("com.github.ygimenez:Pagination-Utils:${versions.JDAUtils}")
-    // 上記からForkされた物。JDA5.x.xに追従している
-    implementation 'com.github.Black0nion:Pagination-Utils:3.3.0'
-    implementation("org.elasticsearch.client:elasticsearch-rest-high-level-client:${versions.elasticsearch}")
-    // elasticsearch-rest-clientはhigh-level-clientに必要
-    // https://medium.com/@hsiehjenhsuan/%E8%A7%A3%E6%B1%BA-elasticsearch-%E4%BD%BF%E7%94%A8-java-high-level-rest-client-%E6%99%82%E5%87%BA%E7%8F%BE-noclassdeffounderror-%E9%8C%AF%E8%AA%A4-10077fcda6b3
-    // runtimeOnlyに移しても一見動作するが、bulk insertするとIncompatibleClassChangeErrorが出る
-    implementation("org.elasticsearch:elasticsearch:${versions.elasticsearch}")
-    implementation("org.elasticsearch.client:elasticsearch-rest-client:${versions.elasticsearch}")
+    // service
+    implementation("com.github.matanki_saito:rico:${versions.rico}")
 
-    // githubを操作するために導入
-    // https://mvnrepository.com/artifact/org.kohsuke/github-api
-    implementation group: 'org.kohsuke', name: 'github-api', version: '1.313'
-
-    // grpc
-    implementation("io.github.lognet:grpc-spring-boot-starter:${versions.grpcSpringStarter}")
-
+    // utils
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jacksonDatatypeJsr310}")
+    implementation("org.apache.commons:commons-lang3:${versions.apacheCommonLang}")
     compileOnly("org.projectlombok:lombok:${versions.lombok}")
-    // lombokにはcompileOnly,annotationProcessor,testImplementationが必要
-    // https://medium.com/@tsuyoshiushio/gradle-5-0-with-lombok-and-spring-boot-e8ca564fc552
     annotationProcessor("org.projectlombok:lombok:${versions.lombok}")
-    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('org.springframework.security:spring-security-test')
     testImplementation("org.projectlombok:lombok:${versions.lombok}")
-    testImplementation("com.squareup.okhttp3:mockwebserver:${versions.okhttp}")
+
+    // test
     testImplementation("org.assertj:assertj-core:${versions.assertj}")
 
-}
-
-protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:${versions.grpc}"
-    }
-    plugins {
-        grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:${versions.grpcGenJava}"
-        }
-    }
-    generateProtoTasks {
-        all()*.plugins {
-            grpc {}
-        }
-    }
-}
-
-// for IDEA
-sourceSets {
-    main {
-        java {
-            srcDirs 'build/generated/source/proto/main/grpc'
-            srcDirs 'build/generated/source/proto/main/java'
-        }
-    }
 }
